src/test/ui/associated-types/associated-types-no-suitable-supertrait.stderr
error[E0277]: the trait bound `Self: Get` is not satisfied
  --> $DIR/associated-types-no-suitable-supertrait.rs:17:5
   |
LL |     fn uhoh<U:Get>(&self, foo: U, bar: <Self as Get>::Value) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Get` is not implemented for `Self`
   |
   = help: consider adding a `where Self: Get` bound

error[E0277]: the trait bound `(T, U): Get` is not satisfied
  --> $DIR/associated-types-no-suitable-supertrait.rs:22:5
   |
LL |     fn uhoh<U:Get>(&self, foo: U, bar: <(T, U) as Get>::Value) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Get` is not implemented for `(T, U)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
